Fix editor z-index

--- a/app/javascript/booklab/editor/index.scss
+++ b/app/javascript/booklab/editor/index.scss
@@ -12,7 +12,7 @@
     background: #fff;
     border: 0;
     box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.15);
-    z-index: 9;
+    z-index: 201;
 
     .navbar-title {
       line-height: 64px;
@@ -75,7 +75,7 @@
   left: 0;
   top: 64px;
   width: 100%;
-  z-index: 8;
+  z-index: 200;
   padding: 10px;
   padding-left: 40px;
   border-bottom: 1px solid #e9e9e9;
